2001-05-02  Bart Schaefer  <schaefer@zsh.org>

	* 14206: configure.in: Fix bug introduced by 14177; also, only
	check for curses headers when linking against the curses library.

2001-05-02  Clint Adams  <clint@zsh.org>

	* 14208: Completion/User/Command/_loadkeys: support Solaris
	loadkeys.

	* 14201: Completion/User/Command/_loadkeys: completion for
	loadkeys.

2001-05-02  Peter Stephenson  <pws@csr.com>

	* 14140: Src/glob.c:  v='A,B'; print X{$~v}Y  now prints XAY XBY.

2001-05-02  Sven Wischnowsky  <wischnow@zsh.org>

	* 14198: Src/Zle/computil.c: remove quotes when looking at
	arguments in comparguments

	* 14197: Completion/Base/Completer/_expand: missing star in
	suffix-style test pattern

2001-05-01  Peter Stephenson  <pws@csr.com>

	* 14181: Src/params.c: follow-up to 14151: use BDIGBUFSIZE in
	two other places.

2001-05-01  Bart Schaefer  <schaefer@zsh.org>

	* 14177: configure.in: Add --with-curses-terminfo to force search
	order for tgetent and search for tigetstr.  Reorder some other
	options and reword their help messages.

2001-04-30  Bart Schaefer  <schaefer@zsh.org>

	* 14169: configure.in: Improve some AC_TRY_LINK tests so that they
	can't accidentally succeed because of a compiler that optimizes
	away unreferenced variables.

2001-04-30  Sven Wischnowsky  <wischnow@zsh.org>

	* 14160: Completion/Base/Completer/_expand: fixlet for the test
	for the suffix style; if word contains only a tilde, don't try
	to expand it

2001-04-30  Andrej Borsenkow <bor@zsh.org>

	* Bart: 14144 (modified): Src/Modules/stat.c: The S_IXUSR,
	S_IXGRP, S_IXOTH are made external variables in Cygwin 1.3.1 and
	cannot be used as static array initializer anymore.

2001-04-29  Bart Schaefer  <schaefer@zsh.org>

	* users/3837: Completion/compinit: Add `NO_kshglob' to
	$_comp_options.

2001-04-28  Bart Schaefer  <schaefer@zsh.org>

	* 14151: Src/params.c, Src/subst.c, Src/system.h: BDIGBUFSIZE is
	the space needed to print a number converted to binary.
